Styled the website in a basic flow pattern.

--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            Bio
+            Home
         </title>
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
-    <body>
-        <div>
-            <div>
-                <img src="_images/IMG_3568.JPG" height="500" width="500">
-                <p>
-                    Peter Alford
-                </p>
-            </div>
-            <h1>
-                Where I Come From
-            </h1>
+    <body style="height: 100%">
+        <!-- Website Navbar -->
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="interests.html">Interests</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <!-- Page Title -->
+        <header>
+            <h1>Peter Alford</h1>
+            <p>
+                (425) 223-1816 | peteralford13@gmail.com | 4016 NE 3rd PL Renton, WA 98056
+            </p>
+        </header>
+        <!-- Page Content -->
+        <article>
+            <h3>Where I Come From</h3>
             <p>
                 I grew up in Renton, Washington with my family. My parents are Craig and
                 Mary Alford and I have three older brothers. I was homeschooled growing
@@ -33,9 +45,7 @@
                 I participated in intramural frisbee and Residence Life. In spring 2017
                 I graduated with a BS in Computer Science and moved back to Renton.
             </p>
-            <h1>
-                Who I Am
-            </h1>
+            <h3>Who I Am</h3>
             <p>
                 I am first and foremost a Christian. I am currently a programmer with an
                 interest in website design. Things I am passionate about include:
@@ -43,9 +53,7 @@
                 Formation. I am skilled at: learning, getting to know people, and
                 listening.
             </p>
-            <h1>
-                Where I Am Going
-            </h1>
+            <h3>Where I Am Going</h3>
             <p>
                 I would like to become project manager or something that combines coding
                 and a larger amount of human interaction. I want to become better at
@@ -53,6 +61,10 @@
                 the above issues through engaging with people and self study. Overall I
                 want to try to live my life with excellence.
             </p>
-        </div>
+        </article>
+        <!-- Footer Section -->
+        <footer>
+            <p>Last Edited: 6/16/17</p>
+        </footer>
     </body>
 </html>
