--- a/projects.html
+++ b/projects.html
@@ -7,19 +7,40 @@
         </title>
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
-
     <body>
+        <!-- Website Navbar -->
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="interests.html">Interests</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <!-- Page Title -->
+        <header>
+            <h1>Projects</h1>
+        </header>
+        <!-- Page Navigation -->
         <div class="tab">
           <button class="tablinks" onclick="changeTab(event, 'cloudScape')" id="defaultOpen">CloudScape</button>
         </div>
-
+        <!-- Page Content -->
+        <!-- CloudScape Tab -->
         <div id="cloudScape" class="tabcontent">
-          <h1>CloudScape</h1>
+          <h3>CloudScape</h3>
           <p>
-              A meditation and Spiritual Formation application.
+              A meditation and Spiritual Formation app.
           </p>
         </div>
-
+        <!-- javascript for giving the tabs functionality -->
         <script src="_javaScript/changeTab.js" type="text/javascript"></script>
+        <!-- Footer Section -->
+        <footer>
+            <p>Last Edited: 6/16/17</p>
+        </footer>
     </body>
 </html>
