--- a/resources.html
+++ b/resources.html
@@ -8,110 +8,75 @@
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
     <body>
-        <div>
-            <h2>Resources</h2>
-            <h1>
-                Programming
-            </h1>
+        <!-- Website Navbar -->
+        <nav>
             <ul>
-                <li> MySQL Cheat Sheet
-
-                    <ul>
-                        <li>
-                            <a href="http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html">
-                                http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li> w3schools
-                    <ul>
-                        <li>
-                            <a href="https://www.w3schools.com/html/">
-                                https://www.w3schools.com/html/
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li> Emacs Cheat Sheet
-                    <ul>
-                        <li>
-                            <a href="https://ccrma.stanford.edu/guides/package/emacs/emacs.html">
-                                https://ccrma.stanford.edu/guides/package/emacs/emacs.html
-                            </a>
-                        </li>
-                    </ul>
-                </li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="interests.html">Interests</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li><a href="resources.html">Resources</a></li>
             </ul>
-            <h1>
-                Design
-            </h1>
-            <ul>
-                <li> Lynda is an educational website
-                    <ul>
-                        <li>
-                            <a href="https://www.lynda.com">
-                                https://www.lynda.com
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <h1>
-                Food
-            </h1>
-            <ul>
-                <li>Tacos
-                    <ul>
-                        <li>
-                            Carne Asada - olive oil and garlic salts
-                        </li>
-                        <li>
-                            Chicken - OJ and johnnies seasoning.
-                        </li>
-                    </ul>
-                </li>
-                <li>Peanut Sauce
-                    <ul>
-                        <li>
-                            Peanut Butter - ½ cup
-                        </li>
-                        <li>
-                            Soy Sauce - 1/4 cup
-                        </li>
-                        <li>
-                            Siracha - 10 drops
-                        </li>
-                        <li>
-                            Water - ½ cup
-                        </li>
-                    </ul>
-                </li>
-                <li>Garlic Bread
-                    <ul>
-                        <li>
-                            <a href="http://www.foodnetwork.com/recipes/ina-garten/garlic-bread-recipe.html">
-                                http://www.foodnetwork.com/recipes/ina-garten/garlic-bread-recipe.html
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <h1>
-                Spiritual Formation
-            </h1>
-            <ul>
-                <li> Spiritual Direction Website
-                    <ul>
-                        <li>
-                            <a href="http://graftedlife.org/esda/search/">
-                                http://graftedlife.org/esda/search/
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-
-        </div>
+        </nav>
+        <!-- Page Title -->
+        <header>
+            <h1>Resources</h1>
+        </header>
+        <!-- Page Content -->
+        <article>
+            <!-- Programming Section -->
+            <h3>Programming</h3>
+            <h2>MySQL Cheat Sheet</h2>
+                <section class="paragraph" href="http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html">
+                    http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html
+                </section>
+            <h2>w3schools</h2>
+                <section class="paragraph" href="https://www.w3schools.com/html/">
+                    https://www.w3schools.com/html/
+                </section>
+            <h2>Emacs Cheat Sheet</h2>
+                <section class="paragraph" href="https://ccrma.stanford.edu/guides/package/emacs/emacs.html">
+                    https://ccrma.stanford.edu/guides/package/emacs/emacs.html
+                </section>
+            <!-- Design Section -->
+            <h3>Design</h3>
+            <h2>Lynda is an educational website</h2>
+                <section class="paragraph" href="https://www.lynda.com">
+                    https://www.lynda.com
+                </section>
+            <!-- Food Section -->
+            <h3>Food</h3>
+            <h2>Tacos</h2>
+                <section class="paragraph">
+                    Carne Asada - olive oil and garlic salts
+                </section>
+                <section class="paragraph">
+                    Chicken - OJ and johnnies seasoning.
+                </section>
+            <h2>Peanut Sauce</h2>
+                <section class="paragraph">
+                    Peanut Butter - ½ cup, Soy Sauce - 1/4 cup, Siracha - 10 drops, Water - ½ cup
+                </section>
+            <h2>Garlic Bread</h2>
+                <section class="paragraph" href="http://www.foodnetwork.com/recipes/ina-garten/garlic-bread-recipe.html">
+                    http://www.foodnetwork.com/recipes/ina-garten/garlic-bread-recipe.html
+                </section>
+            <!-- Spiritual Formation Section -->
+            <h3>Spiritual Formation</h3>
+            <h2>Spiritual Direction Website</h2>
+                <section class="paragraph" href="http://graftedlife.org/esda/search/">
+                    http://graftedlife.org/esda/search/
+                </section>
+            <h2>Westminster Catechism</h2>
+                <section class="paragraph" href="http://www.reformed.org/documents/wsc/index.html?_top=http://www.reformed.org/documents/WSC.html">
+                    http://www.reformed.org/documents/wsc/index.html?_top=http://www.reformed.org/documents/WSC.html
+                </section>
+        </article>
+        <!-- Footer Section -->
+        <footer>
+            <p>Last Edited: 6/16/17</p>
+        </footer>
     </body>
 </html>
