--- a/header.html
+++ b/header.html
@@ -4,9 +4,10 @@
 </head>
 
 <body>
+    <!-- Website Navbar -->
     <nav>
         <ul>
-          <li><a href="index.html">Bio</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="work.html">Work</a></li>
           <li><a href="interests.html">Interests</a></li>
           <li><a href="projects.html">Projects</a></li>
@@ -14,7 +15,5 @@
           <li><a href="library.html">Library</a></li>
           <li><a href="resources.html">Resources</a></li>
         </ul>
-        <!-- end of list -->
     </nav>
-    <!-- end of navbar -->
 </body>
