--- a/interests.html
+++ b/interests.html
@@ -7,36 +7,58 @@
         </title>
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
-
     <body>
+        <!-- Website Navbar -->
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="interests.html">Interests</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <!-- Page Title -->
+        <header>
+            <h1>Interests</h1>
+        </header>
+        <!-- Page Navigation -->
         <div class="tab">
           <button class="tablinks" onclick="changeTab(event, 'design')" id="defaultOpen">Design</button>
           <button class="tablinks" onclick="changeTab(event, 'food')">Food</button>
           <button class="tablinks" onclick="changeTab(event, 'spiritualFormation')">Spiritual Formation</button>
         </div>
-
+        <!-- Page Content -->
+        <!-- Design Tab -->
         <div id="design" class="tabcontent">
-          <h1>Design</h1>
+          <h3>Design</h3>
           <p>
               I really like figuring out how things are designed whether visually or
               mechanically.
           </p>
         </div>
-
+        <!-- Food Tab -->
         <div id="food" class="tabcontent">
-          <h1>Food</h1>
+          <h3>Food</h3>
           <p>
               I love food and the making of it.
           </p>
         </div>
-
+        <!-- Spiritual Formation Tab -->
         <div id="spiritualFormation" class="tabcontent">
-          <h1>Spiritual Formation</h1>
+          <h3>Spiritual Formation</h3>
           <p>
               This is an area of personal growth that I am interested in. Mostly it
               comes down to reading a lot of books about the subject.
           </p>
         </div>
+        <!-- javascript for giving the tabs functionality -->
         <script src="_javaScript/changeTab.js" type="text/javascript"></script>
+        <!-- Footer Section -->
+        <footer>
+            <p>Last Edited: 6/16/17</p>
+        </footer>
     </body>
 </html>
