--- a/photos.html
+++ b/photos.html
@@ -7,87 +7,103 @@
         </title>
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
+    <body style="height: 100%">
+        <!-- Website Navbar -->
+        <nav>
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="work.html">Work</a></li>
+              <li><a href="interests.html">Interests</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="photos.html">Photos</a></li>
+              <li><a href="library.html">Library</a></li>
+              <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <!-- Page Title -->
+        <header>
+            <h1>Photos</h1>
+        </header>
 
-    <body>
+        <!-- Page Navigation -->
         <div class="tab">
-          <button class="tablinks" onclick="changeTab(event, 'landscapes')" id="defaultOpen">Landscapes</button>
+          <button class="tablinks" onclick="changeTab(event, 'friends')" id="defaultOpen">Friends</button>
           <button class="tablinks" onclick="changeTab(event, 'design')">Design</button>
           <button class="tablinks" onclick="changeTab(event, 'cloudScape')">CloudScape</button>
         </div>
-
-        <div id="landscapes" class="tabcontent">
-          <h1>Landscapes</h1>
+        <!-- Page Content -->
+        <!-- Landscape Tab -->
+        <div id="friends" class="tabcontent">
+          <h3>Friends</h3>
             <div class="gallery">
               <a target="_blank" href="_images/brandonAndPeter.jpg">
-                <img src="_images/brandonAndPeter.jpg" width="300" height="200">
+                <img src="_images/brandonAndPeter.jpg" style="width:100%;height:100%;">
               </a>
             </div>
-
             <div class="gallery">
               <a target="_blank" href="_images/Jocey.jpg">
-                <img src="_images/Jocey.jpg" width="600" height="400">
+                <img src="_images/Jocey.jpg" style="width:100%;height:100%;">
               </a>
             </div>
-
+            <div class="gallery">
+              <a target="_blank" href="_images/Friends6.jpg">
+                <img src="_images/Friends6.jpg" style="width:100%;height:100%;">
+              </a>
+            </div>
             <div class="gallery">
               <a target="_blank" href="_images/Russa.jpg">
-                <img src="_images/Russa.jpg" width="600" height="400">
+                <img src="_images/Russa.jpg" style="width:100%;height:100%;">
               </a>
             </div>
         </div>
-
+        <!-- Design Tab -->
         <div id="design" class="tabcontent">
-          <h1>Design</h1>
+          <h3>Design</h3>
           <div class="gallery">
             <a target="_blank" href="_images/IMG_3700.jpg">
-              <img src="_images/IMG_3700.jpg" width="300" height="200">
+              <img src="_images/IMG_3700.jpg" style="width:100%;height:100%;">
             </a>
           </div>
-
           <div class="gallery">
             <a target="_blank" href="_images/IMG_8830.jpg">
-              <img src="_images/IMG_8830.jpg" width="600" height="400">
+              <img src="_images/IMG_8830.jpg" style="width:100%;height:100%;">
             </a>
           </div>
-
           <div class="gallery">
             <a target="_blank" href="_images/IMG_9998.jpg">
-              <img src="_images/IMG_9998.jpg" width="600" height="400">
+              <img src="_images/IMG_9998.jpg" style="width:100%;height:100%;">
             </a>
           </div>
-
           <div class="gallery">
             <a target="_blank" href="_images/IMG951047.jpg">
-              <img src="_images/IMG951047.jpg" width="300" height="200">
+              <img src="_images/IMG951047.jpg" style="width:100%;height:100%;">
             </a>
           </div>
-
           <div class="gallery">
             <a target="_blank" href="_images/IMG951582.jpg">
-              <img src="_images/IMG951582.jpg" width="600" height="400">
+              <img src="_images/IMG951582.jpg" style="width:100%;height:100%;">
             </a>
           </div>
-
           <div class="gallery">
             <a target="_blank" href="_images/IMG957889.jpg">
-              <img src="_images/IMG957889.jpg" width="600" height="400">
+              <img src="_images/IMG957889.jpg" style="width:100%;height:100%;">
             </a>
           </div>
         </div>
-
+        <!-- CloudScape Tab -->
         <div id="cloudScape" class="tabcontent">
-          <h1>CloudScape</h1>
+          <h3>CloudScape</h3>
           <div class="gallery">
             <a target="_blank" href="_images/5maxresdefault.jpg">
-              <img src="_images/5maxresdefault.jpg" width="600" height="400">
+              <img src="_images/5maxresdefault.jpg" style="width:100%;height:100%;">
             </a>
           </div>
         </div>
-
+        <!-- javascript for giving the tabs functionality -->
         <script src="_javaScript/changeTab.js" type="text/javascript"></script>
+        <!-- Footer Section -->
+        <footer>
+            <p>Last Edited: 6/16/17</p>
+        </footer>
     </body>
 </html>
-
-<!--
-For the purpose of making image galleries
-https://www.w3schools.com/css/tryit.asp?filename=trycss_image_gallery -->
