--- a/photos.html
+++ b/photos.html
@@ -7,7 +7,7 @@
         </title>
         <link rel = "stylesheet" type = "text/css" href = "_css/main.css">
     </head>
-    <body style="height: 100%">
+    <body>
         <!-- Website Navbar -->
         <nav>
             <ul>
