Fixed some issues with floats and added a picture to the home page.

--- a/index.html
+++ b/index.html
@@ -22,14 +22,33 @@
         </nav>
         <!-- Page Title -->
         <header>
-            <h1>Peter Alford</h1>
-            <p>
-                (425) 223-1816 | peteralford13@gmail.com | 4016 NE 3rd PL Renton, WA 98056
-            </p>
+            <h1>Home</h1>
         </header>
         <!-- Page Content -->
         <article>
-            <h3>Where I Come From</h3>
+            <div class="col1">
+                <img src="_images/IMG_3568.JPG" style="width:300px;height:300px;">
+            </div>
+            <div class="col2">
+                <h3>Peter Alford</h3>
+                <p>
+                    <strong>Phone: </strong>(425) 223-1816
+                </p>
+                <p>
+                    <strong>Email: </strong>peteralford13@gmail.com
+                </p>
+                <p>
+                    <strong>Address: </strong>
+                </p>
+                <p>
+                    4016 NE 3rd PL
+                <p>
+                <p>
+                    Renton, WA 98056
+                <p>
+            </div>
+            
+            <h3 style="clear:both">Where I Come From</h3>
             <p>
                 I grew up in Renton, Washington with my family. My parents are Craig and
                 Mary Alford and I have three older brothers. I was homeschooled growing
