--- a/photos.html
+++ b/photos.html
@@ -32,12 +32,12 @@
           <button class="tablinks" onclick="changeTab(event, 'cloudScape')">CloudScape</button>
         </div>
         <!-- Page Content -->
-        <!-- Landscape Tab -->
+        <!-- Friends Tab -->
         <div id="friends" class="tabcontent">
           <h3>Friends</h3>
             <div class="gallery">
-              <a target="_blank" href="_images/brandonAndPeter.jpg">
-                <img src="_images/brandonAndPeter.jpg" style="width:100%;height:100%;">
+              <a target="_blank" href="_images/Brandon.jpg">
+                <img src="_images/Brandon.jpg" style="width:100%;height:100%;">
               </a>
             </div>
             <div class="gallery">
