Added a few new line items to the resources page and made the navbar fixed.

--- a/resources.html
+++ b/resources.html
@@ -40,11 +40,37 @@
                 <section class="paragraph" href="https://ccrma.stanford.edu/guides/package/emacs/emacs.html">
                     https://ccrma.stanford.edu/guides/package/emacs/emacs.html
                 </section>
+            <h2>A JavaScript Grid Overlay for the Browser</h2>
+                <section class="paragraph" href="http://hashgrid.com">
+                    http://hashgrid.com
+                </section>
+            <h2>For Creating CSS Resets</h2>
+                <section class="paragraph" href="http://cssreset.com">
+                    http://cssreset.com
+                </section>
             <!-- Design Section -->
             <h3>Design</h3>
             <h2>Lynda is an educational website</h2>
                 <section class="paragraph" href="https://www.lynda.com">
                     https://www.lynda.com
+                </section>
+            <h2>Design Resources for Grid-Based Layouts</h2>
+                <section class="paragraph" href="https://960.gs">
+                    https://960.gs
+                </section>
+                <section class="paragraph" href="http://www.designbygrid.com">
+                    http://www.designbygrid.com
+                </section>
+                <section class="paragraph" href="http://www.thegridsystem.org">
+                    http://www.thegridsystem.org
+                </section>
+            <h2>For Learning About Type Design</h2>
+                <section class="paragraph" href="http://webtypography.net">
+                    http://webtypography.net
+                </section>
+            <h2>A Tool for Creating Color Gradients</h2>
+                <section class="paragraph" href="http://www.colorzilla.com">
+                    http://www.colorzilla.com
                 </section>
             <!-- Food Section -->
             <h3>Food</h3>
