Added some various functionality

--- a/resources.html
+++ b/resources.html
@@ -28,17 +28,9 @@
         <article>
             <!-- Programming Section -->
             <h3>Programming</h3>
-            <h2>MySQL Cheat Sheet</h2>
-                <section class="paragraph" href="http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html">
-                    http://cse.unl.edu/~sscott/ShowFiles/SQL/CheatSheet/SQLCheatSheet.html
-                </section>
-            <h2>w3schools</h2>
-                <section class="paragraph" href="https://www.w3schools.com/html/">
-                    https://www.w3schools.com/html/
-                </section>
-            <h2>Emacs Cheat Sheet</h2>
-                <section class="paragraph" href="https://ccrma.stanford.edu/guides/package/emacs/emacs.html">
-                    https://ccrma.stanford.edu/guides/package/emacs/emacs.html
+            <h2>For Learning How CSS Properties Actually Work</h2>
+                <section class="paragraph" href="https://www.w3.org/Style/CSS/current-work.en.html">
+                    https://www.w3.org/Style/CSS/current-work.en.html                
                 </section>
             <h2>A JavaScript Grid Overlay for the Browser</h2>
                 <section class="paragraph" href="http://hashgrid.com">
@@ -48,6 +40,15 @@
                 <section class="paragraph" href="http://cssreset.com">
                     http://cssreset.com
                 </section>
+            <h2>For Responsive Breakpoints</h2>
+                <section class="paragraph" href="http://www.websitedimensions.com">
+                    http://www.websitedimensions.com
+                </section>
+           <h2>Library That Works With Media Queries</h2>
+                <section class="paragraph" href="https://modernizr.com">
+                    https://modernizr.com
+                </section>
+            
             <!-- Design Section -->
             <h3>Design</h3>
             <h2>Lynda is an educational website</h2>
@@ -72,6 +73,19 @@
                 <section class="paragraph" href="http://www.colorzilla.com">
                     http://www.colorzilla.com
                 </section>
+            <h2>A Tool for Finding Colors for CSS</h2>
+                <section class="paragraph" href="https://color.adobe.com/">
+                     https://color.adobe.com/
+                </section>
+             <h2>A Website With Responsive Designs Using Media Queries</h2>
+                <section class="paragraph" href="https://mediaqueri.es">
+                    https://mediaqueri.es
+                </section>
+            <h2>Sketch Sheets For Responsive Design</h2>
+                <section class="paragraph" href="http://jeremypalford.com/arch-journal/responsive-web-design-sketch-sheets/">
+                    http://jeremypalford.com/arch-journal/responsive-web-design-sketch-sheets/
+                </section>
+
             <!-- Food Section -->
             <h3>Food</h3>
             <h2>Tacos</h2>
